Refactor Home.jsx, Footer.jsx, Home.css, Main.jsx, footer.css, and Header.jsx

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,50 +1,64 @@
+/* Footer.css */
+
 footer {
     background-color: #f0f0f0; 
-    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    padding: 14px;
+    width: 100%;
+
+    @media screen and (min-width: 769px) {
+        padding: 20px;
+    }
 }
 
+/* Estilos para o formulário dentro do footer */
 form {
     display: flex;    
     align-items: center;
-    gap: 12px;
-    
     width: 100%;
     background-color: #f0f0f0;
+    gap: 10px;
+
+    @media screen and (min-width: 426px) and (max-width: 768px) {
+        width: 95%;
+    }
+
+    @media screen and (min-width: 769px) {
+        width: 80%;
+    }
 }
 
+/* Estilos para o input dentro do formulário */
 input {
     flex: 1;
-
     border: none;
-    border-radius: 0.5rem;
-    
-    padding: 0.75rem; 
-
+    border-radius: 8px;
+    padding: 10px; 
     background-color: #f0f0f0;
-    color: #242424;
-
+    color: #333333;
     box-shadow: 1px 1px 5px rgb(180, 180, 180);
 }
 
-input:focus {
-    outline: none;
-}
-
-button {
+/* Estilos para o botão de envio */
+#send-button {
     display: flex;
     justify-content: center;
     align-items: center;
-
     padding: 8px;
-    background-color: #6366F1;
+    background-color: #962038;
     border-radius: 12px;
     border: none;
+
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-button:hover {
-    background-color: #4F46E5;
+/* Efeitos de hover e foco para o botão de envio */
+#send-button:hover,
+#send-button:focus {
+    background-color: #861c32;
 }
 
-button:focus {
+input:focus {
     outline: none;
 }
