--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,27 @@
-.container {
+.container, .container > div{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    
+    width: 100%;
     color: white;
+}
+.container > div {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (min-width: 769px) {
+    .container {
+        flex-direction: row;
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    .container > div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
