--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,10 +6,12 @@ header {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     gap: 10px;
     padding: 10px;
+    transition: background-color 0.5s ease-in-out;
 
     @media screen and (min-width: 320px) and (max-width: 480px) {
         gap: 10px;
         padding: 10px;
+        border-bottom: 1px solid #5f5f5f25;
     }
 
     @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -22,6 +24,7 @@ header {
         width: 25%;
         gap: 16px;
         padding: 14px;
+        border-right: 1px solid #5f5f5f25;
     }
 
     @media screen and (min-width: 1025px) {
@@ -29,6 +32,7 @@ header {
         width: 25%;
         gap: 16px;
         padding: 20px;
+        border-right: 1px solid #5f5f5f25;
     }
 }
 
@@ -73,6 +77,7 @@ header {
     border-radius: 14px;
     font-size: 8px;
     padding: 4px 8px;
+    transition: background-color 0.5s ease-in-out;
 
     @media screen and (min-width: 769px) {
         font-size: 10px;
@@ -85,10 +90,7 @@ header {
     display: flex;
     background-color: transparent;
     border: none;
-
-    @media screen and (min-width: 769px) {
-        display: none;
-    }
+    cursor: pointer;
 }
 
 /* History Container */
@@ -110,6 +112,7 @@ header {
     }
 }
 
+/* History title */
 .history-container > h1 {
     text-align: center;
     font-size: 14px;
@@ -151,7 +154,6 @@ header {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    /* position: relative; */
 
     @media screen and (min-width: 769px) and (max-width: 1024px) {
         font-size: 12px;
