--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -8,6 +8,12 @@ main {
     gap: 10px;
     padding: 10px;
     font-size: 14px;
+    background-color: white;
+    transition: background-color 0.5s ease-in-out;
+
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
 
     @media screen and (min-width: 320px) and (max-width: 480px) {
         gap: 10px;
@@ -25,10 +31,6 @@ main {
         gap: 20px;
         padding: 20px;
         font-size: 14px;
-
-        width: 100%;
-        padding-left: 10%;
-        padding-right: 10%;
     }
 }
 
@@ -118,6 +120,7 @@ main {
     }
 }
 
+/* Estilos para o scrollbar */
 @media screen and (min-width: 769px) {
     ::-webkit-scrollbar {
         width: 8px;
