--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -8,12 +8,10 @@ main {
     gap: 10px;
     padding: 10px;
     font-size: 14px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     transition: background-color 0.5s ease-in-out;
 
     width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
 
     @media screen and (min-width: 320px) and (max-width: 480px) {
         gap: 10px;
@@ -25,12 +23,18 @@ main {
         gap: 16px;
         padding: 14px;
         font-size: 14px;
+
+        padding-left: 10%;
+        padding-right: 10%;
     }
 
     @media screen and (min-width: 769px) {
         gap: 20px;
         padding: 20px;
         font-size: 14px;
+
+        padding-left: 20%;
+        padding-right: 20%;
     }
 }
 
@@ -119,6 +123,35 @@ main {
         height: 52px;
     }
 }
+
+/* Estilos para a mensagem de fundo */
+.empty-main-message {
+    color: rgb(199, 199, 199);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    padding: 20px;
+
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+        font-size: 12px;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+        font-size: 14px;
+
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    @media screen and (min-width: 769px) {
+        font-size: 16px;
+
+        padding-left: 20%;
+        padding-right: 20%;
+    }
+} 
 
 /* Estilos para o scrollbar */
 @media screen and (min-width: 769px) {
