Update CSS styles and add loading animation

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -26,7 +26,7 @@
     }
 }
 
-/* Dark Theme main */
+/* Dark Theme para a main */
 .dark-theme-707A81 {
     background-color: #474f55;
     color: #c9ced3;
@@ -44,6 +44,7 @@
     }
 }
 
+/* Dark Theme geral */
 .dark-theme {
     background-color: #1E1E1E;
 
