--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,3 @@
-/* Footer.css */
-
 footer {
     background-color: #f0f0f0; 
     display: flex;
@@ -12,7 +10,6 @@ footer {
     }
 }
 
-/* Estilos para o formulário dentro do footer */
 form {
     display: flex;    
     align-items: center;
@@ -29,7 +26,6 @@ form {
     }
 }
 
-/* Estilos para o input dentro do formulário */
 input {
     flex: 1;
     border: none;
@@ -40,7 +36,6 @@ input {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* Estilos para o botão de envio */
 #send-button {
     display: flex;
     justify-content: center;
@@ -53,7 +48,6 @@ input {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* Efeitos de hover e foco para o botão de envio */
 #send-button:hover,
 #send-button:focus {
     background-color: #861c32;
@@ -61,4 +55,34 @@ input {
 
 input:focus {
     outline: none;
+}
+
+.loading {
+    animation: loading 1s infinite;
+}
+
+@keyframes loading {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.sending {
+    animation: sending 1s infinite;
+}
+
+@keyframes sending {
+    0% {
+        transform: translateY(-2px);
+    }
+    50% {
+        transform: translateY(2px);
+    }
+    100% {
+        transform: translateY(-2px);
+    }
 }
