--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,3 @@
-/* Header */
 header {
     display: flex;
     align-items: center;
@@ -36,7 +35,6 @@ header {
     }
 }
 
-/* Header Details */
 .detail {
     display: flex;
     flex-direction: column;
@@ -58,7 +56,6 @@ header {
     }
 }
 
-/* Bot Name */
 .bot-name {
     font-weight: 700;
     font-size: 14px;
@@ -69,7 +66,6 @@ header {
     }
 }
 
-/* Bot Status */
 .status {
     background-color: #268035;
     color: white;
@@ -85,7 +81,6 @@ header {
     }
 }
 
-/* Theme Button */
 .theme {
     display: flex;
     background-color: transparent;
@@ -93,8 +88,7 @@ header {
     cursor: pointer;
 }
 
-/* History Container */
-.history-container {
+.information-container {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
@@ -112,15 +106,20 @@ header {
     }
 }
 
-/* History title */
-.history-container > h1 {
+.information-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.information-title > h1 {
     text-align: center;
     font-size: 14px;
     font-weight: 700;
 }
 
-/* History Listener */
-.history-listener {
+.information-listener {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -130,8 +129,7 @@ header {
     }
 }
 
-/* History Detail */
-.history-detail {
+.information-detail {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -139,13 +137,16 @@ header {
     border: 1px solid #707070;
     border-radius: 8px;
 
+    color: white;
+    text-decoration: none;
+
     @media screen and (min-width: 769px) and (max-width: 1024px) {
         padding: 5px;
         gap: 5px;
     }
 }
 
-.history-detail > h2 {
+.information-detail > h2 {
     display: flex;
     align-items: center;
     gap: 4px;
@@ -159,30 +160,4 @@ header {
         font-size: 12px;
         max-width: 80%;
     }
-}
-
-.horizontal-detail {
-    width: 15px;
-}
-
-/* New Conversation Button */
-.new-conversation {
-    padding: 10px;
-    border: none;
-    border-radius: 8px;
-    background-color: #268035;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-
-    @media screen and (max-width: 768px) {
-        display: none;
-    }    
-
-    @media screen and (min-width: 769px) and (max-width: 1024px) {
-        padding: 8px;
-        font-size: 12px;
-    }
-}
-
-.new-conversation:hover {
-    background-color: #257932;
 }
