--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,5 +1,3 @@
-/* Main.css */
-
 main {
     display: flex;
     flex-direction: column;
@@ -38,14 +36,12 @@ main {
     }
 }
 
-/* Estilos para os containers de bot e usuário */
 .bot-container, .user-container {
     display: flex;
     align-items: stretch;
     gap: 10px;
 }
 
-/* Estilos específicos de bot e usuário */
 .user-container {
     justify-content: flex-start;
 }
@@ -54,8 +50,10 @@ main {
     justify-content: flex-end;
 }
 
-/* Estilos para as mensagens de bot e usuário */
 .user-message, .bot-message {
+    display: flex;
+    align-items: center;
+
     position: relative;
     flex-wrap: wrap;
     border-radius: 10px;
@@ -75,11 +73,10 @@ main {
     }
 }
 
-/*  Estilos para o triângulo de bot e usuário */
 .bot-message::before{
     content: '';
     position: absolute;
-    top: 20px;
+    top: 35%;
     left: 100%;
     border-top: 8px solid transparent;
     border-left: 8px solid #707A81;
@@ -90,7 +87,7 @@ main {
 .user-message::before{
     content: '';
     position: absolute;
-    top: 20px;
+    top: 35%;
     right: 100%;
     border-top: 8px solid transparent;
     border-left: 8px solid transparent;
@@ -98,12 +95,10 @@ main {
     border-bottom: 8px solid transparent;   
 }
 
-/* Estilos específicos para a mensagem do bot */
 .bot-message {
     order: -1;
 }
 
-/* Estilos para o ícone */
 .icon {
     color: #3D3F4B;
     background-color: rgb(241, 241, 241);
@@ -124,7 +119,6 @@ main {
     }
 }
 
-/* Estilos para a mensagem de fundo */
 .empty-main-message {
     color: rgb(199, 199, 199);
     display: flex;
@@ -153,7 +147,6 @@ main {
     }
 } 
 
-/* Estilos para o scrollbar */
 @media screen and (min-width: 769px) {
     ::-webkit-scrollbar {
         width: 8px;
