--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -101,7 +101,6 @@ header {
     }
 
     @media screen and (min-width: 769px) and (max-width: 1024px) {
-        padding: 10px;
         gap: 5px;
     }
 }
@@ -117,16 +116,16 @@ header {
     text-align: center;
     font-size: 14px;
     font-weight: 700;
+
+    @media screen and (min-width: 769px) and (max-width: 1024px) {
+        font-size: 12px;
+    }
 }
 
 .information-listener {
     display: flex;
     flex-direction: column;
     gap: 10px;
-
-    @media screen and (min-width: 769px) and (max-width: 1024px) {
-        gap: 5px;
-    }
 }
 
 .information-detail {
@@ -141,7 +140,6 @@ header {
     text-decoration: none;
 
     @media screen and (min-width: 769px) and (max-width: 1024px) {
-        padding: 5px;
         gap: 5px;
     }
 }
