--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -122,7 +122,8 @@ main {
 .empty-main-message {
     color: rgb(199, 199, 199);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     height: 100vh;
     text-align: center;
@@ -172,4 +173,52 @@ main {
     ::-webkit-scrollbar-corner {
         background: #f1f1f1;
     }  
+}
+
+.empty-suggestion-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+}
+
+.empty-suggestion {
+    border-radius: 10px;
+    border: 1px solid;
+    padding: 10px;
+}
+
+.empty-suggestion > h1 {
+    font-size: 14px;
+    font-weight: 500;
+    /* color: #5f5f5f65; */
+
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+        font-size: 12px;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+        font-size: 14px;
+    }
+
+    @media screen and (min-width: 769px) {
+        font-size: 16px;
+    }
+}
+
+.empty-suggestion > p {
+    font-size: 12px;
+    font-weight: 400;
+    /* color: #5f5f5f65; */
+
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+        font-size: 10px;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+        font-size: 12px;
+    }
+
+    @media screen and (min-width: 769px) {
+        font-size: 14px;
+    }
 }
