Add Contact component and styles

--- a/src/styles/darkTheme.css
+++ b/src/styles/darkTheme.css
@@ -40,4 +40,9 @@
         background-color: #962038;
         color: #c9ced3;
     }
+
+    .contact-phone, .contact-clock {
+        background-color: #962038;
+        color: #c9ced3;
+    }
 }
