--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -68,20 +68,20 @@
 }
 
 @keyframes shake {
-    10%, 90% {
-      transform: translate3d(-1px, 0, 0);
+    0%, 30% {
+        transform: rotate(0deg);
     }
-    
-    20%, 80% {
-      transform: translate3d(2px, 0, 0);
-    }
-  
-    30%, 50%, 70% {
-      transform: translate3d(-4px, 0, 0);
-    }
-  
-    40%, 60% {
-      transform: translate3d(4px, 0, 0);
+
+    10%, 50%, 70% {
+        transform: rotate(10deg);
+    };
+
+    50%, 70% {
+        transform: rotate(-10deg);
+    };
+
+    100% {
+        transform: rotate(10deg);
     }
 }
 
