--- a/src/styles/botStatus.css
+++ b/src/styles/botStatus.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;   
+    align-items: center;
     gap: 10px;
 
     @media screen and (min-width: 320px) and (max-width: 768px) {
@@ -18,19 +18,18 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 2px;
-    
+
     @media screen and (min-width: 320px) and (max-width: 768px) {
         flex: 1 1 auto;
     }
 
-    @media screen and (min-width: 769px) and (max-width: 1024px) {
+    @media screen and (min-width: 769px) {
         align-items: center;
         gap: 4px;
-    }
 
-    @media screen and (min-width: 1025px) {
-        align-items: center;
-        gap: 6px;
+        @media (min-width: 1025px) {
+            gap: 6px;
+        }
     }
 }
 
