--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -9,19 +9,17 @@
     }
 }
 
-.contact-phone, .contact-clock {
+.contact-phone,
+.contact-clock {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
     padding: 10px;
-
     background-color: #268035;
-
     text-decoration: none;
     color: white;
-    
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
     @media (min-width: 768px) {
@@ -31,21 +29,22 @@
     @media (min-width: 1200px) {
         padding: 10px;
     }
+
+    &:hover {
+        background-color: #2d8645;
+    }
+
+    &:hover .phone-icon {
+        animation: shake 0.5s infinite;
+    }
+
+    &:hover .clock-icon {
+        animation: clock 1s infinite;
+    }
 }
 
-.contact-phone:hover, .contact-clock:hover {
-    background-color: #2d8645;
-}
-
-.contact-phone:hover .phone-icon {
-    animation: shake 0.5s infinite;
-}
-
-.contact-clock:hover .clock-icon {
-    animation: clock 1s infinite;
-}
-
-.phone-paragraph, .clock-paragraph {
+.phone-paragraph,
+.clock-paragraph {
     text-align: center;
     font-size: 10px;
 
@@ -58,7 +57,8 @@
     }
 }
 
-.phone-icon, .clock-icon {
+.phone-icon,
+.clock-icon {
     width: 15px;
     margin-bottom: 2px;
 
@@ -74,11 +74,11 @@
 
     10%, 50%, 70% {
         transform: rotate(10deg);
-    };
+    }
 
     50%, 70% {
         transform: rotate(-10deg);
-    };
+    }
 
     100% {
         transform: rotate(10deg);
