--- a/src/styles/suggestion.css
+++ b/src/styles/suggestion.css
@@ -1,7 +1,7 @@
 .suggestion-container {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 10px;;
+    gap: 10px;
 }
 
 .suggestion {
@@ -18,10 +18,6 @@
         font-size: 12px;
     }
 
-    @media screen and (min-width: 481px) and (max-width: 768px) {
-        font-size: 14px;
-    }
-
     @media screen and (min-width: 769px) {
         font-size: 16px;
     }
@@ -33,10 +29,6 @@
 
     @media screen and (min-width: 320px) and (max-width: 480px) {
         font-size: 10px;
-    }
-
-    @media screen and (min-width: 481px) and (max-width: 768px) {
-        font-size: 12px;
     }
 
     @media screen and (min-width: 769px) {
