--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -26,15 +26,15 @@
         max-width: 80%;
         padding: 12px;
     }
-}
-
-.user-message::before{
-    content: '';
-    position: absolute;
-    top: 20px;
-    right: 100%;
-    border-top: 8px solid transparent;
-    border-left: 8px solid transparent;
-    border-right: 8px solid #707A81;
-    border-bottom: 8px solid transparent;   
+    
+    &::before {
+        content: '';
+        position: absolute;
+        top: 20px;
+        right: 100%;
+        border-top: 8px solid transparent;
+        border-left: 8px solid transparent;
+        border-right: 8px solid #707A81;
+        border-bottom: 8px solid transparent;   
+    }
 }
