--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -53,3 +53,8 @@
         gap: 5px;
     }
 }
+
+.information-detail:hover {
+    transform: scale(1.05);
+    transition: transform 0.1s ease-in-out;
+}
