--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -13,7 +13,7 @@
     flex-wrap: wrap;
     border-radius: 10px;
     background-color: #707A81;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px var(--shadow);
     max-width: 80%;
     padding: 8px;
 
