--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,19 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  /* colors */
   --primary: #962038;
   --secondary: #268035;
+
+  /* gray scale */
+  --gray-50 : #f0f0f0;
+  --gray-100: #f1f1f1;
+  --gray-200: #c9ced3;
+  --gray-300: #707A81;
+  --gray-400: #474f55;
+  --gray-600: #3d3f4b;
+  --gray-700: #5f5f5f25;
+  --gray-800: #1E1E1E;
+  /* shadow */
+  --shadow: #00000033;
 }
