--- a/src/styles/bot.css
+++ b/src/styles/bot.css
@@ -11,8 +11,8 @@
     position: relative;
     flex-wrap: wrap;
     border-radius: 10px;
-    background-color: #707A81;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: var(--gray-300);
+    box-shadow: 0 2px 4px var(--shadow);
     max-width: 80%;
     padding: 8px;
     order: -1;
@@ -33,20 +33,20 @@
         top: 20px;
         left: 100%;
         border-top: 8px solid transparent;
-        border-left: 8px solid #707A81;
+        border-left: 8px solid var(--gray-300);
         border-right: 8px solid transparent;
         border-bottom: 8px solid transparent;   
     }
 }
 
 .icon {
-    color: #3D3F4B;
-    background-color: rgb(241, 241, 241);
+    color: var(--gray-600);
+    background-color: var(--gray-100);
     width: 52px;
     height: 52px;
     border-radius: 100%;
     padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px var(--shadow);
 
     @media screen and (min-width: 320px) {
         width: 48px;
