--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #f0f0f0; 
+    background-color: var(--gray-50); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +17,7 @@ form {
     display: flex;    
     align-items: center;
     width: 100%;
-    background-color: #f0f0f0;
+    background-color: var(--gray-50);
     gap: 10px;
     transition: background-color 0.5s ease-in-out;
 
@@ -35,15 +35,11 @@ input {
     border: none;
     border-radius: 8px;
     padding: 15px; 
-    background-color: #f0f0f0;
+    background-color: var(--gray-50);
     color: #333333;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px var(--shadow);
     transition: background-color 0.5s ease-in-out;
 }
-
-/* input:focus {
-    border: 1px solid var(--secondary);
-} */
 
 .menu {
     display: flex;
@@ -74,7 +70,7 @@ input {
     background-color: var(--primary);
     border-radius: 12px;
     border: none;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px var(shadow);
     transition: background-color 0.5s ease-in-out;
 }
 
