--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,7 +11,7 @@ header {
     @media screen and (min-width: 320px) and (max-width: 480px) {
         gap: 10px;
         padding: 10px;
-        border-bottom: 1px solid #5f5f5f25;
+        border-bottom: 1px solid var(--gray-700);
     }
 
     @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -24,7 +24,7 @@ header {
         width: 25%;
         gap: 16px;
         padding: 14px;
-        border-right: 1px solid #5f5f5f25;
+        border-right: 1px solid var(--gray-700);
     }
 
     @media screen and (min-width: 1025px) {
@@ -32,7 +32,7 @@ header {
         width: 25%;
         gap: 16px;
         padding: 20px;
-        border-right: 1px solid #5f5f5f25;
+        border-right: 1px solid var(--gray-700);
     }
 }
 
