--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -43,7 +43,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    border: 1px solid #707070;
+    border: 1px solid var(--gray-400);
     border-radius: 8px;
     color: white;
     text-decoration: none;
