--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -65,23 +65,23 @@ main {
     }
     
     ::-webkit-scrollbar-thumb {
-        background-color: #5f5f5f25;
+        background-color: var(--gray-700);
         border-radius: 6px;
     }
 
     ::-webkit-scrollbar-thumb:hover {
-        background-color: #5f5f5f65;
+        background-color: var(--gray-700);
     }
 
     ::-webkit-scrollbar-track {
-        background: #f1f1f1;
+        background: var(--gray-100);
     }
 
     ::-webkit-scrollbar-track-piece {
-        background-color: #f1f1f1;
+        background-color: var(--gray-100);
     }
 
     ::-webkit-scrollbar-corner {
-        background: #f1f1f1;
+        background: var(--gray-100);
     }  
 }
