Update CSS styles

--- a/src/styles/bot.css
+++ b/src/styles/bot.css
@@ -3,58 +3,76 @@
     justify-content: flex-end;
     align-items: stretch;
     gap: 10px;
-}
 
-.bot-message {
+    color: black;
+}
+  
+  .bot-message {
     display: flex;
     align-items: center;
-    position: relative;
     flex-wrap: wrap;
+
+    position: relative;
+    
+    color: black;
+    background-color: var(--gray-200);
+    
     border-radius: 10px;
-    background-color: var(--gray-300);
-    box-shadow: 0 2px 4px var(--shadow);
     max-width: 80%;
+    
     padding: 8px;
     order: -1;
-
+  
     @media screen and (min-width: 481px) {
-        max-width: 80%;
-        padding: 10px;
+      max-width: 80%;
+      padding: 10px;
     }
-
+  
     @media screen and (min-width: 769px) {
-        max-width: 80%;
-        padding: 12px;
+      max-width: 80%;
+      padding: 12px;
     }
-
+  
     &::before {
-        content: '';
-        position: absolute;
-        top: 20px;
-        left: 100%;
-        border-top: 8px solid transparent;
-        border-left: 8px solid var(--gray-300);
-        border-right: 8px solid transparent;
-        border-bottom: 8px solid transparent;   
+      content: '';
+      position: absolute;
+      top: 20px;
+      left: 100%;
+      
+      border-top: 8px solid transparent;
+      border-left: 8px solid var(--gray-200);
+      border-right: 8px solid transparent;
+      border-bottom: 8px solid transparent;
     }
 }
-
-.icon {
+  
+  .icon {
     color: var(--gray-600);
     background-color: var(--gray-100);
-    width: 52px;
-    height: 52px;
-    border-radius: 100%;
+
+    width: 48px;
+    height: 48px;
+    
+    border-radius: 10px;
     padding: 10px;
-    box-shadow: 0 2px 4px var(--shadow);
-
+  
     @media screen and (min-width: 320px) {
-        width: 48px;
-        height: 48px;
+      width: 42px;
+      height: 42px;
     }
-
+  
     @media screen and (min-width: 769px) {
-        width: 52px;
-        height: 52px;
+      width: 48px;
+      height: 48px;
     }
+}
+  
+.icon-user {
+    color: white;
+    background-color: var(--secondary);
+}
+
+.icon-bot {
+    color: white;
+    background-color: var(--primary);
 }
