--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,60 +2,130 @@ main {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
-    overflow-y: auto;
     gap: 10px;
-    padding: 10px;
+
+    background-color: var(--gray-500);
     font-size: 14px;
-    transition: background-color 0.5s ease-in-out;
+    
+    padding: 10px;
     width: 100%;
+    overflow-y: auto;
+    
+    transition: background-color 0.5s ease-in-out;
 
     @media screen and (min-width: 320px) and (max-width: 480px) {
         gap: 10px;
+
         padding: 10px;
+
         font-size: 12px;
     }
 
     @media screen and (min-width: 481px) and (max-width: 768px) {
         gap: 16px;
+
         padding: 14px;
+
         font-size: 14px;
-        padding-left: 10%;
-        padding-right: 10%;
     }
 
     @media screen and (min-width: 769px) {
         gap: 20px;
+
         padding: 20px;
+
         font-size: 14px;
-        padding-left: 20%;
-        padding-right: 20%;
+    }
+}
+
+.container-config {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+        display: none;
+    }
+}
+
+.container-config-title {
+    color: black;
+}
+
+.container-config-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.button-config {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+
+    color: var(--gray-200);
+    background-color: transparent;
+    font-size: 12px;
+
+    padding: 10px 12px;
+    border-radius: 8px;
+    border: 1px solid var(--gray-200);
+    
+    cursor: pointer;
+}
+
+.container-main {
+    display: flex;
+    flex-direction: column;
+
+    flex: 1 1 auto;
+
+    border-radius: 10px;
+    padding: 10px;
+    gap: 10px;
+
+    overflow-y: auto;
+
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+        border: none;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+        padding-left: 10%;
+        padding-right: 10%;
+        border: none;
+    }
+
+    @media screen and (min-width: 769px) {
+        padding-left: 15%;
+        padding-right: 15%;
     }
 }
 
 .empty-main-message {
-    color: rgb(199, 199, 199);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 100vh;
+    
+    color: rgb(199, 199, 199);
     text-align: center;
+    
+    height: 100vh;
     padding: 20px;
 
     @media screen and (min-width: 320px) and (max-width: 480px) {
         font-size: 12px;
     }
 
-    @media screen and (min-width: 481px) and (max-width: 768px) {
+    @media screen and (min-width: 481px) and (max-width: 1024) {
         font-size: 14px;
+        
         padding-left: 10%;
         padding-right: 10%;
-    }
-
-    @media screen and (min-width: 769px) {
-        font-size: 16px;
-        padding-left: 20%;
-        padding-right: 20%;
     }
 } 
 
