--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -3,17 +3,20 @@
     justify-content: flex-start;
     align-items: stretch;
     gap: 10px;
+    
+    color: black;
 }
 
 .user-message {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 
     position: relative;
-    flex-wrap: wrap;
+    
     border-radius: 10px;
-    background-color: #707A81;
-    box-shadow: 0 2px 4px var(--shadow);
+    background-color: var(--gray-200);
+
     max-width: 80%;
     padding: 8px;
 
@@ -29,12 +32,14 @@
     
     &::before {
         content: '';
+
         position: absolute;
         top: 20px;
         right: 100%;
+        
         border-top: 8px solid transparent;
         border-left: 8px solid transparent;
-        border-right: 8px solid #707A81;
+        border-right: 8px solid var(--gray-200);
         border-bottom: 8px solid transparent;   
     }
 }
