--- a/src/styles/darkTheme.css
+++ b/src/styles/darkTheme.css
@@ -18,6 +18,7 @@
     input {
         border: 1px solid var(--gray-600);
         color: var(--gray-200);
+        background-color: var(--gray-800);
     }
 
     #send-button {
