Update Lucide icons and fix server error message

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -61,6 +61,10 @@ input:focus {
     border: none;
     cursor: pointer;
 
+    border: 1px solid var(--gray-200);
+    border-radius: 8px;
+    padding: 4px;
+
     @media screen and (max-width: 1023px) {
         display: none;
     }
