--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -46,6 +46,9 @@ header {
 
 .menu-closed {
     position: absolute;
+    height: 100%;
+    z-index: 100;
+    
     animation: slideOut 0.3s ease-in-out forwards;
 }
 
