--- a/src/components/Layouts/Header/header.css
+++ b/src/components/Layouts/Header/header.css
@@ -1,4 +1,3 @@
-/* Header */
 header {
     display: flex;
     align-items: center;
@@ -42,6 +41,13 @@ header {
         padding: 20px;
         border-right: 1px solid var(--gray-700);
     }
+}
+
+.theme {
+    display: flex;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .menu-closed {
