Layout and style updates

--- a/src/components/UI/Menu/menu.css
+++ b/src/components/UI/Menu/menu.css
@@ -36,3 +36,11 @@
     
     cursor: pointer;
 }
+
+.share-config {
+    display: none;
+
+    @media screen and (min-width:763px) {
+        display: flex;
+    }
+}
